--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ip": "^1.1.3",
     "jsonwebtoken": "^5.7.0",
     "morgan": "^1.7.0",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "tv-interface": "^2.3.1"
   },
   "devDependencies": {},
   "scripts": {
